...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EndTimeEt"></ListView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addQuestionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:backgroundTint="@color/dark_purple_them"
            android:onClick="addQuestion"
            android:src="@drawable/ic_baseline_add_24"
...
